--- a/style.css
+++ b/style.css
@@ -1,5 +1,14 @@
 h1 {
-    color: blue
+    color: grey;
+}
+
+h2 {
+	color: white;
+}
+
+#content {
+	border: 20px solid grey;
+	background-color: grey;
 }
 
 .fulltext p,
@@ -46,30 +55,22 @@ body {
 /* Create three unequal columns that sits next to each other */
 .column {
     padding: 10px;
-    height: 300px; /* Should be removed. Only for demonstration */
+    height: 300px;
 }
 
-/* Left and right column */
 .column.side {
+	margin: 10px;
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
 }
 
-/* Middle column */
 .column.middle {
+	margin: 10px;
     -webkit-flex: 2;
     -ms-flex: 2;
     flex: 2;
 }
-
-/* Style the footer */
-.footer {
-    background-color: #f1f1f1;
-    padding: 10px;
-    text-align: center;
-}
-
 /* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
 @media (max-width: 600px) {
     .row {
@@ -79,8 +80,10 @@ body {
 }
 
 img {
-    width: 90%;
-    height: auto;
+	width: 100%;
+	height: 300px;
+	background-size: 100% 100%;
+	border: 10px solid grey
 }
   
   .topnav {
@@ -102,17 +105,16 @@ img {
 	background-color: #ddd;
 	color: black;
   }
-  
-  .active {
-	background-color: #4CAF50;
-	color: white;
-  }
-  
+    
   .topnav .icon {
 	display: none;
-  }
+	}
+	
+	.right {
+		text-align: right;
+	}
   
-  @media screen and (max-width: 600px) {
+  @media screen and (max-width: 479px) {
 	.topnav a:not(:first-child) {display: none;}
 	.topnav a.icon {
 	  float: right;
@@ -120,16 +122,16 @@ img {
 	}
   }
   
-  @media screen and (max-width: 600px) {
+  @media screen and (max-width: 479px) {
 	.topnav.responsive {position: relative;}
 	.topnav.responsive .icon {
 	  position: absolute;
 	  right: 0;
 	  top: 0;
 	}
+	
 	.topnav.responsive a {
 	  float: none;
 	  display: block;
 	  text-align: left;
 	}
-  }
