--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ h2 {
 }
 
 #content {
+	margin-top: 0px;
 	border: 20px solid grey;
 	background-color: grey;
 }
@@ -59,6 +60,7 @@ body {
 }
 
 .column.side {
+	margin-left: 0px;
 	margin: 10px;
    -webkit-flex: 1;
    -ms-flex: 1;
@@ -67,6 +69,7 @@ body {
 
 .column.middle {
 	margin: 10px;
+	margin-right: 0px;
     -webkit-flex: 2;
     -ms-flex: 2;
     flex: 2;
@@ -80,58 +83,59 @@ body {
 }
 
 img {
+	margin-bottom: 20px;
 	width: 100%;
 	height: 300px;
 	background-size: 100% 100%;
 	border: 10px solid grey
 }
   
-  .topnav {
+.topnav {
 	overflow: hidden;
 	background-color: #333;
-  }
+}
   
-  .topnav a {
-	float: left;
-	display: block;
-	color: #f2f2f2;
-	text-align: center;
-	padding: 14px 16px;
-	text-decoration: none;
-	font-size: 17px;
-  }
+.topnav a {
+float: left;
+display: block;
+color: #f2f2f2;
+text-align: center;
+padding: 14px 16px;
+text-decoration: none;
+font-size: 17px;
+}
   
-  .topnav a:hover {
-	background-color: #ddd;
-	color: black;
-  }
+.topnav a:hover {
+background-color: #ddd;
+color: black;
+}
     
-  .topnav .icon {
-	display: none;
-	}
+.topnav .icon {
+display: none;
+}
 	
-	.right {
-		text-align: right;
-	}
+.right {
+	text-align: right;
+}
   
-  @media screen and (max-width: 479px) {
+@media screen and (max-width: 479px) {
 	.topnav a:not(:first-child) {display: none;}
 	.topnav a.icon {
-	  float: right;
-	  display: block;
-	}
-  }
+		float: right;
+		display: block;
+}
+}
   
-  @media screen and (max-width: 479px) {
+@media screen and (max-width: 479px) {
 	.topnav.responsive {position: relative;}
 	.topnav.responsive .icon {
-	  position: absolute;
-	  right: 0;
+		position: absolute;
+		right: 0;
 	  top: 0;
 	}
 	
-	.topnav.responsive a {
-	  float: none;
-	  display: block;
-	  text-align: left;
+.topnav.responsive a {
+	float: none;
+	display: block;
+	text-align: left;
 	}
