--- a/style.css
+++ b/style.css
@@ -1,8 +1,13 @@
+body {
+	font-family: 'Noto Sans', sans-serif;
+	margin: 0;
+}
+
 h1 {
     color: grey;
 }
 
-h2 {
+h3 {
 	color: white;
 }
 
@@ -26,17 +31,8 @@ h2 {
 	display: none;
 }
 
-#tittle-paragraph {
-    font-family: sans-serif
-}
-
 * {
     box-sizing: border-box;
-}
-
-body {
-	font-family: 'Noto Sans', sans-serif;
-	margin: 0
 }
 
 /* Style the header */
@@ -56,12 +52,12 @@ body {
 /* Create three unequal columns that sits next to each other */
 .column {
     padding: 10px;
-    height: 300px;
 }
 
 .column.side {
-	margin-left: 0px;
 	margin: 10px;
+	margin-top: 20px;
+	margin-left: 5px;
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
@@ -69,17 +65,25 @@ body {
 
 .column.middle {
 	margin: 10px;
-	margin-right: 0px;
+	margin-top: 20px;
+	margin-right: 5px;
     -webkit-flex: 2;
     -ms-flex: 2;
     flex: 2;
 }
+
 /* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
-@media (max-width: 600px) {
+@media (max-width: 479px) {
     .row {
       -webkit-flex-direction: column;
       flex-direction: column;
-    }
+		}
+		
+		div{
+			margin-right: 0px!important;
+			margin-left: 0px!important;	
+			margin: 0px!important;
+		}
 }
 
 img {
@@ -123,7 +127,7 @@ display: none;
 	.topnav a.icon {
 		float: right;
 		display: block;
-}
+	}
 }
   
 @media screen and (max-width: 479px) {
